# TrainForgeConductor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py  models_mapping.py  rate_limiter.py  scheduler.py
app/providers/: __init__.py  base.py  cerebras.py  nvidia.py
config/: config.example.yaml
docs/: api-reference.md  configuration.md  docker.md  integrations.md
examples/: __init__.py  client.py  usage_examples.py
tests/: __init__.py  test_conductor.py
